--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,19 @@
+---
+
 spring:
   application:
     name: shop-service
   config:
+    activate:
+      on-profile: local
     import: "optional:configserver:http://localhost:8888/"
+
+---
+
+spring:
+  application:
+    name: shop-service
+  config:
+    activate:
+      on-profile: stage
+    import: "optional:configserver:http://host.docker.internal:8888/"
